syntax = "proto3";
import "ThTCHGeometry.proto";

message ThSUComponentData {
    int32 definition_index = 1;
    ThTCHMatrix3d transformations = 2;
}
