syntax = "proto3";
import "ThTCHRootData.proto";
import "ThSUBuildingElementData.proto";
import "ThSUCompDefinitionData.proto";

message ThSUProjectData {
    ThTCHRootData root = 1;
    repeated ThSUBuildingElementData buildings = 2;
    repeated ThSUCompDefinitionData definitions = 3;
    bool is_face_mesh = 4;
}