syntax = "proto3";
import "ThTCHBuiltElementData.proto";

message ThTCHWindowData {
    ThTCHBuiltElementData build_element = 1;
    uint32 type = 2;
}
